2007-07-15  Jorge Gonzalez <jorgegonz@svn.gnome.org>

        * es.po: Updated Spanish translation

2007-07-12  Jorge Gonzalez <jorgegonz@svn.gnome.org>

        * es/es.po: Updated Spanish translation
        * Makefile.am: Added es to DOC_LINGUAS

2007-06-03  Jorge Gonzalez <jorgegonz@svn.gnome.org>

        * es/es.po: Added initial Spanish translation
        * es/figures/*.png: added screenshots

2007-04-30  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Added Swedish translation.
	* Makefile.am: Added sv to DOC_LINGUAS