@@ -1,7 +1,0 @@
-figdir=
-docname=gnobots2
-lang=es
-omffile=gnobots2-es.omf
-entities=legal.xml
-include $(top_srcdir)/xmldocs.make
-dist-hook: app-dist-hook
