@@ -1,27 +1,0 @@
-<legalnotice id="legalnotice">
-  <para>
-Esta programa y su documentación es software libre; puede redistribuirlo
-y/o modificarlo bajo los términos de la GNU General Public
-License tal y como se publicó por la Free Software
-Foundation; o bajo los términos de la versión 2 de la
-Licencia, o (a su elección) cualquier versión posterior.
-  </para>
-  <para>
-Este programa se distribuye con la esperanza de que sea
-útil, pero SIN NINGUNA GARANTIA; incluso sin las garantías
-que puedan haber implícitas por el mercado o FITNESS para
-<!-- Significa aptitud, pero no se que es lo que quiere decir el -->
-<!-- párrafo. Si sabes como traducirlo, e98cuenc@criens.u-psud.fr -->
-cualquier propósito en partícular. Ver la GNU General Public
-License para más detalles.
-  </para>
-  <para>
-Debería de haber recibido una copia de la GNU General
-Public License con este programa; si no es así, escriba a la Free
-Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
-02111-1307 USA
-  </para>
-  <para>
-  Para más detalles ver el fichero COPYING.
-  </para>
-</legalnotice>
